[package]
name = "meshtastic"
description = "A Rust library for communicating with and configuring Meshtastic devices."
homepage = "https://meshtastic.org/"
repository = "https://github.com/meshtastic/rust"
keywords = ["meshtastic", "mesh", "lora", "tcp", "serial"]
categories = ["embedded", "config", "encoding"]
authors = ["Adam McQuilkin"]
readme = "README.md"
license = "GPL-3.0"
version = "0.1.6"
edition = "2021"

[lib]
doctest = false

[features]
default = ["serde"]
gen = ["dep:prost-build", "dep:protoc-bin-vendored", "dep:walkdir"]

serde = ["dep:serde", "dep:serde_json"]
ts-gen = ["serde", "dep:specta"]
bluetooth-le = ["dep:uuid","dep:btleplug"]

[[example]]
name = "basic_serial"

[[example]]
name = "basic_tcp"

[[example]]
name = "message_filtering"

[[example]]
name = "generate_typescript_types"
required-features = ["ts-gen"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
prost-build = { version = "0.11.1", optional = true }
protoc-bin-vendored = { version = "3.0.0", optional = true }
walkdir = { version = "2.3.2", optional = true }

[dependencies]
futures-util = "0.3.28"
rand = "0.8.5"
tokio = { version = "1.32.0", features = ["full"] }
tokio-serial = "5.4.4"
tokio-util = "0.7.8"
prost = "0.11.0"
log = "0.4.20"

specta = { git = "https://github.com/ajmcquilkin/specta.git", rev = "6a8731d", optional = true, features = ["chrono"], version = "=1.0.3" }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = "1.0.48"
uuid = { version = "1.6.1", optional = true }
btleplug = { version = "0.11.5", optional = true }

[dev-dependencies]
fern = { version = "0.6.2", features = ["colored"] }
humantime = "2.1.0"
